--- a/Alafrancaise.html
+++ b/Alafrancaise.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="unique.css">
+    <link rel="stylesheet" type="htlm" href="Acceuil.html">
     <script src="https://kit.fontawesome.com/e5dbd3d7b3.js" crossorigin="anonymous"></script>
 
     <title>À la française</title>
@@ -18,11 +19,15 @@
 
     <!--HEADER-->
     <header>
-        <a href="">
+        <a href="index.html">
+        <div class="back">
+            <i class="fas fa-arrow-left"></i>
+        </div>
+        </a>
         <div class="logo">
             <img class="svg-logo" src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
         </div>
-        </a>
+        
         </header>
 
         <div class="background">
@@ -54,7 +59,7 @@
                             <p>25€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -69,7 +74,7 @@
                             <p>35€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -84,7 +89,7 @@
                             <p>20€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -106,7 +111,7 @@
                             <p>40€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -121,7 +126,7 @@
                             <p>35€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -136,7 +141,7 @@
                             <p>44€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -158,7 +163,7 @@
                             <p>18€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -173,7 +178,7 @@
                             <p>22€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -188,7 +193,7 @@
                             <p>23€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
