--- a/Lanoteenchantee.html
+++ b/Lanoteenchantee.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="unique.css">
+    <link rel="stylesheet" type="htlm" href="index.html">
     <script src="https://kit.fontawesome.com/e5dbd3d7b3.js" crossorigin="anonymous"></script>
 
     <title>La note enchantée</title>
@@ -18,15 +19,19 @@
 
     <!--HEADER-->
     <header>
-        <a href="">
-        <div class="logo">
-            <img class="svg-logo" src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+        <a href="index.html">
+        <div class="back">
+            <i class="fas fa-arrow-left"></i>
         </div>
         </a>
+        <div class="logo">
+            <img class="svg-logo" src="src/ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+        </div>
+        
         </header>
 
         <div class="background">
-            <img class="background__img" src="lanote.jpg" alt="Image du restaurant La note enchantée"
+            <img class="background__img" src="src/lanote.jpg" alt="Image du restaurant La note enchantée"
             width="365" height="250">
         </div>
 
@@ -36,6 +41,9 @@
             <div class="menu__title">
                 <h1>La note enchantée</h1>
                 </div>
+                <div class="heart">
+                    <i class="far fa-heart"></i>
+                  </div>
 
         <!--MENU-->
         
@@ -54,8 +62,8 @@
                             <p>25€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                            <i class="fas fa-check-circle check"></i>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -69,7 +77,7 @@
                             <p>35€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -84,7 +92,7 @@
                             <p>20€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -99,7 +107,7 @@
                             <p>35€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -121,7 +129,7 @@
                             <p>40€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -136,7 +144,7 @@
                             <p>35€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -151,7 +159,7 @@
                             <p>44€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -168,12 +176,12 @@
                 <div class="food__details">
                     <h3>Macaron noisette et chocolat</h3>
                     <div class="food__more">
-                        <p>Glace au caramel brun et sel de...</p>
+                        <p>Glace au caramel brun et sel de Guérande</p>
                         <div class="food__price">
                             <p>18€</p>
-                        </div>
+                            </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -188,7 +196,7 @@
                             <p>22€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -203,7 +211,7 @@
                             <p>23€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
