--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -11,6 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="unique.css">
+    <link rel="stylesheet" type="htlm" href="Acceuil.html">
     <script src="https://kit.fontawesome.com/e5dbd3d7b3.js" crossorigin="anonymous"></script>
 
     <title>La palette du goût</title>
@@ -20,15 +21,19 @@
 
     <!--HEADER-->
     <header>
-        <a href="">
-        <div class="logo">
-            <img class="svg-logo" src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+        <a href="index.html">
+        <div class="back">
+            <i class="fas fa-arrow-left"></i>
         </div>
         </a>
+        <div class="logo">
+            <img class="svg-logo" src="src/ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+        </div>
+        
         </header>
 
         <div class="background">
-            <img class="background__img" src="palgout.jpg" alt="Image du restaurant La palette du goût"
+            <img class="background__img" src="src/palgout.jpg" alt="Image du restaurant La palette du goût"
             width="365" height="250">
         </div>
 
@@ -56,7 +61,7 @@
                             <p>25€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -71,7 +76,7 @@
                             <p>35€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -86,7 +91,7 @@
                             <p>20€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -108,7 +113,7 @@
                             <p>40€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -123,7 +128,7 @@
                             <p>35€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -138,7 +143,7 @@
                             <p>44€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -160,7 +165,7 @@
                             <p>18€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -175,7 +180,7 @@
                             <p>22€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -190,7 +195,7 @@
                             <p>23€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
