--- a/Ledelicedessens.html
+++ b/Ledelicedessens.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="unique.css">
+    <link rel="stylesheet" type="htlm" href="Acceuil.html">
     <script src="https://kit.fontawesome.com/e5dbd3d7b3.js" crossorigin="anonymous"></script>
 
     <title>Le délice des sens</title>
@@ -18,15 +19,19 @@
 
     <!--HEADER-->
     <header>
-        <a href="">
-        <div class="logo">
-            <img class="svg-logo" src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+        <a href="index.html">
+        <div class="back">
+            <i class="fas fa-arrow-left"></i>
         </div>
         </a>
+        <div class="logo">
+            <img class="svg-logo" src="src/ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+        </div>
+        
         </header>
 
         <div class="background">
-            <img class="background__img" src="délice.jpg" alt="Image du restaurant Le délice des sens"
+            <img class="background__img" src="src/délice.jpg" alt="Image du restaurant Le délice des sens"
             width="365" height="250">
         </div>
 
@@ -54,9 +59,9 @@
                             <p>25€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                            <i class="fas fa-check-circle check"></i>
                     </div>
+                 </div>
                 </div>
             </div>
 
@@ -69,7 +74,7 @@
                             <p>35€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -84,7 +89,7 @@
                             <p>20€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -97,16 +102,16 @@
                 <h2>PLATS</h2>
             </div>
 
-            <div class="food__card--2">
-                <div class="food__details--2">
-                    <h3>Poulet rôti aux herbes de<br>provence</h3>
-                    <div class="food__more--2">
+            <div class="food__card">
+                <div class="food__details">
+                    <h3>Poulet rôti aux herbes de provence</h3>
+                    <div class="food__more">
                         <p>Et sa crème de truffe</p>
-                        <div class="food__price--2">
+                        <div class="food__price">
                             <p>40€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -121,7 +126,7 @@
                             <p>35€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -136,7 +141,7 @@
                             <p>44€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -158,7 +163,7 @@
                             <p>18€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -173,7 +178,7 @@
                             <p>22€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
@@ -188,7 +193,7 @@
                             <p>23€</p>
                         </div>
                         <div class="food__effect">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle check"></i>
                         </div>
                     </div>
                 </div>
