--- a/Alafrancaise.html
+++ b/Alafrancaise.html
@@ -58,10 +58,10 @@
                         <div class="food__price">
                             <p>25€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -73,10 +73,10 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -88,10 +88,10 @@
                         <div class="food__price">
                             <p>20€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
         </section>
@@ -110,10 +110,10 @@
                         <div class="food__price">
                             <p>40€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -125,10 +125,10 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -140,10 +140,10 @@
                         <div class="food__price">
                             <p>44€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
         </section>
@@ -162,10 +162,10 @@
                         <div class="food__price">
                             <p>18€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -177,10 +177,10 @@
                         <div class="food__price">
                             <p>22€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -192,10 +192,10 @@
                         <div class="food__price">
                             <p>23€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
         </section>
@@ -215,11 +215,11 @@
   
               <div class="footer-details">
                   <div class="footer-link">
-                      <a href="">Proposer un restaurant</a>
+                      <a href=""><i class="fas fa-utensils"></i> Proposer un restaurant</a>
                   </div>
   
                   <div class="footer-link">
-                      <a href="">Devenir partenaire</a>
+                      <a href=""><i class="fas fa-hands-helping"></i> Devenir partenaire</a>
                   </div>
   
                   <div class="footer-link">
