--- a/Lanoteenchantee.html
+++ b/Lanoteenchantee.html
@@ -61,11 +61,11 @@
                         <div class="food__price">
                             <p>25€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                      </div>
                     </div>
                 </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
+              </div>
             </div>
 
             <div class="food__card">
@@ -76,10 +76,10 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -91,10 +91,10 @@
                         <div class="food__price">
                             <p>20€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -106,10 +106,10 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
         </section>
@@ -128,10 +128,10 @@
                         <div class="food__price">
                             <p>40€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -143,10 +143,10 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -158,10 +158,10 @@
                         <div class="food__price">
                             <p>44€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
         </section>
@@ -180,10 +180,10 @@
                         <div class="food__price">
                             <p>18€</p>
                             </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -195,10 +195,10 @@
                         <div class="food__price">
                             <p>22€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -210,10 +210,10 @@
                         <div class="food__price">
                             <p>23€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
         
@@ -234,11 +234,11 @@
   
               <div class="footer-details">
                   <div class="footer-link">
-                      <a href="">Proposer un restaurant</a>
+                      <a href=""><i class="fas fa-utensils"></i> Proposer un restaurant</a>
                   </div>
   
                   <div class="footer-link">
-                      <a href="">Devenir partenaire</a>
+                      <a href=""><i class="fas fa-hands-helping"></i> Devenir partenaire</a>
                   </div>
   
                   <div class="footer-link">
