--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -60,10 +60,10 @@
                         <div class="food__price">
                             <p>25€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -75,10 +75,10 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -90,10 +90,10 @@
                         <div class="food__price">
                             <p>20€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
         </section>
@@ -112,10 +112,10 @@
                         <div class="food__price">
                             <p>40€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -127,10 +127,10 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -142,10 +142,10 @@
                         <div class="food__price">
                             <p>44€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
         </section>
@@ -164,10 +164,10 @@
                         <div class="food__price">
                             <p>18€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -179,10 +179,10 @@
                         <div class="food__price">
                             <p>22€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
 
@@ -194,10 +194,10 @@
                         <div class="food__price">
                             <p>23€</p>
                         </div>
-                        <div class="food__effect">
-                            <i class="fas fa-check-circle check"></i>
-                        </div>
                     </div>
+                </div>
+                <div class="food__effect">
+                    <i class="fas fa-check-circle check"></i>
                 </div>
             </div>
         </section>
@@ -217,11 +217,11 @@
   
               <div class="footer-details">
                   <div class="footer-link">
-                      <a href="">Proposer un restaurant</a>
+                      <a href=""><i class="fas fa-utensils"></i> Proposer un restaurant</a>
                   </div>
   
                   <div class="footer-link">
-                      <a href="">Devenir partenaire</a>
+                      <a href=""><i class="fas fa-hands-helping"></i> Devenir partenaire</a>
                   </div>
   
                   <div class="footer-link">
